--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,9 +1,24 @@
+# Use Node 20 base image (ARM-compatible)
 FROM node:20
 
+# Set working directory
 WORKDIR /app
 
+# Copy package files first (for caching)
+COPY package.json pnpm-lock.yaml* ./
+
+# Set env variable to ignore Rollup ARM binary issues
+ENV ROLLUP_IGNORE_PLATFORM_CHECK=true
+
+# Install dependencies (pnpm)
+RUN npm install -g pnpm
+RUN pnpm install --shamefully-hoist
+
+# Copy app source code
 COPY . .
 
-RUN pnpm install
+# Expose port for Vite
+EXPOSE 5173
 
-CMD ["pnpm", "run", "dev"]
+# Start the dev server
+CMD ["pnpm", "run", "dev", "--", "--host", "0.0.0.0"]
