--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   app:
     build:
@@ -8,33 +6,40 @@ services:
       - "8000:8000"
     volumes:
       - ./backend:/var/www/html
-    environment:
-      - DB_HOST=db
-      - DB_DATABASE=vendor_management
-      - DB_USERNAME=root
-      - DB_PASSWORD=secret
+    networks:
+      - backend
     depends_on:
       - db
 
   db:
     image: mysql:8.0
     environment:
-      MYSQL_DATABASE: vendor_management
-      MYSQL_ROOT_PASSWORD: secret
+      MYSQL_ROOT_PASSWORD: ${DB_PASSWORD}
+      MYSQL_ROOT_HOST: '%'
+      MYSQL_DATABASE: ${DB_DATABASE}
     ports:
       - "3306:3306"
+    networks:
+      - backend
     volumes:
       - db_data:/var/lib/mysql
 
   frontend:
     build:
       context: ./frontend
+      dockerfile: Dockerfile
+    restart: unless-stopped
     ports:
       - "5173:5173"
     volumes:
       - ./frontend:/app
-    depends_on:
-      - app
+      - /app/node_modules
+    networks:
+      - backend
+
+networks:
+  backend:
+    driver: bridge
 
 volumes:
   db_data:
