--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ services:
   app:
     build:
       context: ./backend
+    container_name: tenant_app
     ports:
       - "8000:8000"
     volumes:
@@ -13,6 +14,7 @@ services:
 
   db:
     image: mysql:8.0
+    container_name: tenant_db
     environment:
       MYSQL_ROOT_PASSWORD: ${DB_PASSWORD}
       MYSQL_ROOT_HOST: '%'
@@ -27,7 +29,7 @@ services:
   frontend:
     build:
       context: ./frontend
-      dockerfile: Dockerfile
+    container_name: tenant_frontend
     restart: unless-stopped
     ports:
       - "5173:5173"
