--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,8 +1,7 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://localhost:8000
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
@@ -21,13 +20,13 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=db
 DB_PORT=3306
-DB_DATABASE=backend
+DB_DATABASE=vendor_management
 DB_USERNAME=root
-DB_PASSWORD=
+DB_PASSWORD=secret
 
-SESSION_DRIVER=database
+SESSION_DRIVER=file
 SESSION_LIFETIME=120
 SESSION_ENCRYPT=false
 SESSION_PATH=/
